# Kedro-Universal-Catalog

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
tests/cli/: test_plugin.py
tests/core/: test_serving.py  test_universal_catalog.py  test_universal_catalog_dataset.py
tests/core/datasets/: test_remote_catalog.py  test_universal_catalog_dataset.py
universal_catalog/: __init__.py
universal_catalog/cli/: plugin.py
universal_catalog/core/: __init__.py  serving.py  universal_catalog.py  universal_catalog_dataset.py
universal_catalog/core/datasets/: datasets.py  remote_catalog.py  universal_catalog_dataset.py  utils.py
universal_catalog/templates/server/: cookiecutter.json  prompts.yml
universal_catalog/templates/server/{{ cookiecutter.repo_name }}/: .gitignore  requirements.txt
universal_catalog/templates/server/{{ cookiecutter.repo_name }}/{{ cookiecutter.python_package }}/: main.py  settings.py
universal_catalog/templates/server/{{ cookiecutter.repo_name }}/{{ cookiecutter.python_package }}/conf/base/: catalog.yml
